# cam-alias-checker

./: AUTHORS  README  README.md  build.sh
examples/: hello_world.c  run.sh
libcam/: AUTHORS  ChangeLog  Makefile.am  README  bootstrap  configure.ac
libcam/include/: Makefile.am  cam.h
libcam/pkgconfig/: Makefile.am  libcam.pc.in
libcam/regression/: run_regressions.py
libcam/regression/test0/: call_trace.txt.bz2  loop_trace.txt.bz2  oracle.txt
libcam/regression/test0/memory_accesses/: memory_accesses.1000.w.txt.bz2  memory_accesses.2000.r.txt.bz2  memory_accesses.3000.w.txt.bz2  memory_accesses.4000.w.txt.bz2  memory_accesses.5000.w.txt.bz2  memory_accesses.501.r.txt.bz2  memory_accesses.502.w.txt.bz2  memory_accesses.503.r.txt.bz2  memory_accesses.504.r.txt.bz2  memory_accesses.6000.w.txt.bz2  memory_accesses.7000.w.txt.bz2
libcam/regression/test1/: call_trace.txt.bz2  loop_trace.txt.bz2  oracle.txt
libcam/regression/test1/memory_accesses/: memory_accesses.100.w.txt.bz2  memory_accesses.101.w.txt.bz2  memory_accesses.102.r.txt.bz2  memory_accesses.103.r.txt.bz2  memory_accesses.104.r.txt.bz2  memory_accesses.105.r.txt.bz2  memory_accesses.106.r.txt.bz2  memory_accesses.107.r.txt.bz2
libcam/regression/test2/: call_trace.txt.bz2  loop_trace.txt.bz2  oracle.txt
libcam/regression/test2/memory_accesses/: memory_accesses.100.w.txt.bz2  memory_accesses.101.r.txt.bz2  memory_accesses.102.r.txt.bz2  memory_accesses.200.w.txt.bz2  memory_accesses.201.r.txt.bz2  memory_accesses.202.r.txt.bz2  memory_accesses.300.w.txt.bz2  memory_accesses.301.r.txt.bz2  memory_accesses.302.r.txt.bz2  memory_accesses.303.r.txt.bz2  memory_accesses.304.r.txt.bz2
libcam/regression/test3/: call_trace.txt.bz2  loop_trace.txt.bz2  oracle.txt
libcam/regression/test3/memory_accesses/: memory_accesses.100.w.txt.bz2  memory_accesses.101.r.txt.bz2
libcam/regression/test4/: call_trace.txt.bz2  loop_trace.txt.bz2
libcam/regression/test5/: call_trace.txt.bz2  loop_trace.txt.bz2  oracle.txt
libcam/regression/test5/memory_accesses/: memory_accesses.6270.r.txt.bz2  memory_accesses.6270.txt.bz2  memory_accesses.6271.r.txt.bz2  memory_accesses.6271.txt.bz2  memory_accesses.6272.r.txt.bz2  memory_accesses.6272.txt.bz2  memory_accesses.6273.r.txt.bz2  memory_accesses.6273.txt.bz2  memory_accesses.6274.r.txt.bz2  memory_accesses.6274.txt.bz2  memory_accesses.6275.r.txt.bz2  memory_accesses.6275.txt.bz2  memory_accesses.6276.r.txt.bz2  memory_accesses.6276.txt.bz2  memory_accesses.6277.r.txt.bz2  memory_accesses.6277.txt.bz2  memory_accesses.6278.txt.bz2  memory_accesses.6278.w.txt.bz2  memory_accesses.6279.txt.bz2  memory_accesses.6279.w.txt.bz2
libcam/src/: BZ2ParserState.cpp  BZ2ParserState.h  CallTrace.cpp  CallTrace.h  CallTraceCfcLex.h  CallTraceStreamer.cpp  CallTraceStreamer.h  CompressionPattern.cpp  CompressionPattern.h  ControlFlowCompressor.cpp  ControlFlowCompressor.h  LoopTraceCfcLex.h  LoopTraceStreamer.cpp  LoopTraceStreamer.h  Makefile.am  MemoryTraceStreamer.cpp  MemoryTraceStreamer.h  MemoryTracer.cpp  MemoryTracer.h  RepetitionPattern.cpp  RepetitionPattern.h  StaticLoopRec.cpp  StaticLoopRec.h  TimeoutCounter.h  call_trace_cfc_parser.lex  call_trace_parser.lex  cam.cpp  cam.h  cam_system.h  camtest.cpp  compressed_call_trace_parser.lex  compressed_loop_trace_parser.lex  dependence_analysis.cpp  dependence_analysis.h  dependence_pairs_parser.lex  dynamic_gcd.cpp  dynamic_gcd.h  loop_trace.cpp  loop_trace.hh  loop_trace_cfc_parser.lex  (+13 more)
libcam/src/intervaltree/: IntervalTree.h
libplatform/: AUTHORS  ChangeLog  Makefile.am  README  bootstrap  configure.ac
libplatform/doc/: Makefile.am  doxy.config
libplatform/include/: Makefile.am  jitsystem.h  platform_API.h
libplatform/pkgconfig/: Makefile.am  libplatform.pc.in
libplatform/src/: Makefile.am  jitsystem.h.in  platform_API.c  platform_API.h
xanlib/: AUTHORS  ChangeLog  Doxyfile  Makefile.am  README  bootstrap  configure.ac
xanlib/debian/: changelog  control  copyright  libxan-doc.install  rules
xanlib/doc/: Makefile.am  xanlib-doc.tar.bz2
xanlib/include/: Makefile.am  xanlib.h
xanlib/pkgconfig/: Makefile.am  libxan.pc.in
xanlib/src/: .xanlib.h.swp  Makefile.am  xan-system.h  xanbitset.c  xangraph.c  xanlib.c  xanlib.h  xanlist.c  xanpipe.c  xanqueue.c  xanstack.c  xantable.c  xanvar.c
